--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
                         <configuration>
                             <finalName>tracker</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>ru.job4j.tracker.StartUI</mainClass>
                                 </transformer>
                             </transformers>
